Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY

{{$NEXT}}

0.002     2010-11-13
    * Fix passing skip_tests and add_tests to Dist::Zilla::PluginBundle::TestingMania

0.001     2010-10-31
    * Initial version