@@ -2,7 +2,7 @@ NAME
     Dist::Zilla::PluginBundle::DOHERTY - configure Dist::Zilla like DOHERTY
 
 VERSION
-    version 0.002
+    version 0.003
 
 SYNOPSIS
         # in dist.ini
