@@ -1,16 +1,0 @@
-[@CorePrep]
-
-[Name]
-[Version]
-[Generic / SYNOPSIS]
-[Generic / DESCRIPTION]
-[Generic / METHODS]
-
-[Leftovers]
-
-[Availability]
-[SourceGitHub]
-[BugsAndLimitations]
-
-[Authors]
-[Legal]
